<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_title">Shoes Store</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">don\'t have account? Sign Up</string>
    <string name="welcome_to_app">Welcome To Shoe Shop</string>
    <string name="welcome">You can find all kinds , colors of shoes , also you can add shoes </string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="instructions">Instructions</string>
    <string name="instructions_of_app">you can add more shoes on clicking on Add Button</string>
    <string name="welcome_title">Welcome</string>
    <string name="shoes_name">Name</string>
    <string name="shoes_description">Description</string>
    <string name="company">Company Name</string>
    <string name="shoes_size">Shoes Size</string>
    <string name="Add_shoes">Add Shoes</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="shoes_image_link">Image Link</string>

</resources>
